GH-245: Expose customizers for KCL configs
Fixes: #245
Issue link: https://github.com/spring-projects/spring-integration-aws/issues/245

* Add something like `setLeaseManagementConfigCustomizer(Consumer<LeaseManagementConfig> leaseManagementConfigCustomizer)`
to the `KclMessageDrivenChannelAdapter` and call them before creating a `Scheduler`
* Also add a simple `emptyRecordList` property for the `ProcessorConfig`